Fixed button alignment in campaigner

--- a/src/assets/scss/template/_template.scss
+++ b/src/assets/scss/template/_template.scss
@@ -64,3 +64,7 @@ table.button.google table td {
 .wrapper.secondary {
   background: #f3f3f3;
 }
+
+.button.medium.primary {
+  margin: 20px auto;
+}
